refactor: update security handling and JWT integration